# axiom-mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  mypy.ini  pyproject.toml  ruff.toml  setup.cfg
axiom_mcp/: __init__.py  __main__.py  axiom_mcp.py  cli.py  exceptions.py  test1.py
axiom_mcp/prompts/: base.py  manager.py  utils.py
axiom_mcp/resources/: advanced_types.py  base.py  manager.py  types.py  utils.py
axiom_mcp/tools/: __init__.py  base.py  manager.py  registry.py  utils.py
axiom_mcp/utilities/: __init__.py  logging.py  types.py
examples/: echo_server.py  math_server.py  random_example.py
src/axiom_mcp/: __init__.py  __main__.py  cli.py  exceptions.py  server.py  test1.py
src/axiom_mcp/prompts/: __init__.py  manager.py  utils.py
src/axiom_mcp/resources/: __init__.py  advanced_types.py  base.py  types.py  utils.py
src/axiom_mcp/tools/: base.py  manager.py  utils.py
src/axiom_mcp/utilities/: logging.py  types.py
test_scripts/: test_validation_logging.py
tests/: test_cli.py  test_exceptions.py  test_init.py  test_prompts_base.py  test_prompts_manager.py  test_prompts_utils.py  test_resources_advanced.py  test_resources_base.py  test_resources_manager.py  test_resources_types.py  test_resources_utils.py  test_tools_enhanced.py  test_tools_registry.py
